--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -20,7 +20,7 @@ en:
       confirmation_instructions:
         subject: "Confirmation instructions"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "'마이존' 비밀번호를 변경하기 위한 메일입니다."
       unlock_instructions:
         subject: "Unlock instructions"
     omniauth_callbacks:
@@ -56,5 +56,6 @@ en:
       not_found: "not found"
       not_locked: "was not locked"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: ""
+        other: ""
+        #%{resource} %{count}
